code/2021-04-15-envoy-in-5-minutes/envoy.yaml
static_resources:
  listeners:
  - address:
      socket_address:
        address: 0.0.0.0
        port_value: 8800
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          codec_type: AUTO
          stat_prefix: ingress_http
          route_config:
            name: local_route
            virtual_hosts:
              - name: local_service
                domains:
                  - "*"
                routes:
                  - match:
                      prefix: "/"
                    route:
                      cluster: api_backend
          # Don't forget: No error message but also no functionality if missing
          http_filters:
            - name: envoy.filters.http.router
              typed_config: { }
  clusters:
  - name: api_backend
    connect_timeout: 0.25s
    # https://www.envoyproxy.io/docs/envoy/latest/api-v2/api/v2/cluster.proto#enum-cluster-discoverytype
#    type: STRICT_DNS
    type: LOGICAL_DNS
    health_checks:
      always_log_health_check_failures: true
      timeout: 0.1s
      interval: 3s
      unhealthy_threshold: 3
      healthy_threshold: 1
      http_health_check:
        path: /health
    dns_lookup_family: V4_ONLY
    load_assignment:
      cluster_name: api_backend
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: api
                port_value: 8080
admin:
  access_log_path: "/dev/null"
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 8081
